# boar-detector

./: .env  .gitignore  Dockerfile  cloud.py  local.py  main.py  pyproject.toml  requirements.txt
